# evspace

./: .gitignore  CMakeLists.txt  makefile  test-standards.bat  test-standards.sh
include/: _dot_product.hpp  angles.hpp  axis.hpp  comma_operator.hpp  compare.hpp  evspace.h  evspace.hpp  evspace_common.hpp  matrix.hpp  rotation.hpp  vector.hpp
src/: CMakeLists.txt  angles.cpp  matrix.cpp  rotation.cpp  vector.cpp
tests/: CMakeLists.txt  angles_unit_test.cpp  helpers.hpp  input_pch.hpp  matrix_unit_test.cpp  reference_frame_unit_test.cpp  rotation_unit_test.cpp  vector_unit_test.cpp
tests/resources/: test_rotation_matrices.hpp  test_rotation_vectors.hpp
